# Schach

./: .gitignore  CMakeLists.txt  main.cpp
